# vcmi

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  ChangeLog.md  Global.h  Version.cpp.in  Version.h
.github/: release_notes.md.template
AI/: CMakeLists.txt
AI/ArenaAI/: CArenaAI.cpp  CArenaAI.h  CMakeLists.txt  StdInc.cpp  StdInc.h  main.cpp
AI/BattleAI/: AttackPossibility.cpp  BattleAI.cpp  BattleAI.h  BattleEvaluator.cpp  BattleEvaluator.h  CMakeLists.txt  SpellTargetsEvaluator.cpp  SpellTargetsEvaluator.h  StackWithBonuses.cpp  StackWithBonuses.h
AI/BattleLLM/: BattleLLM.cpp  BattleLLM.h  CMakeLists.txt  main.cpp
AI/EmptyAI/: CEmptyAI.cpp  CEmptyAI.h  CMakeLists.txt
AI/MMAI/: CMakeLists.txt  common.h
AI/MMAI/BAI/: factory.cpp  factory.h  router.cpp  router.h
AI/MMAI/BAI/fallback/: scripted_model.cpp
AI/MMAI/BAI/v13/: BAI.cpp  BAI.h  battlefield.cpp  battlefield.h  hex.cpp  hex.h  render.cpp  stack.cpp  state.cpp  state.h
AI/Nullkiller/: AIGateway.cpp  AIGateway.h  AIUtility.cpp
AI/Nullkiller/Analyzers/: ArmyManager.cpp  BuildAnalyzer.cpp
AI/Nullkiller/Behaviors/: DefenceBehavior.cpp
AI/Nullkiller/Engine/: PriorityEvaluator.cpp
AI/Nullkiller/Goals/: AbstractGoal.h
AI/Nullkiller2/: AIGateway.cpp  AIGateway.h  AIUtility.cpp  AIUtility.h  CMakeLists.txt
AI/Nullkiller2/Analyzers/: ArmyManager.cpp  BuildAnalyzer.cpp  DangerHitMapAnalyzer.cpp  HeroManager.cpp  ObjectClusterizer.cpp
AI/Nullkiller2/Behaviors/: ClusterBehavior.cpp  DefenceBehavior.cpp  ExplorationBehavior.cpp  RecruitHeroBehavior.cpp  StartupBehavior.cpp
AI/Nullkiller2/Engine/: FuzzyHelper.cpp  FuzzyHelper.h  Nullkiller.cpp  Nullkiller.h  PriorityEvaluator.cpp  PriorityEvaluator.h  Settings.cpp  Settings.h
AI/Nullkiller2/Goals/: AdventureSpellCast.cpp  CompleteQuest.h  ExecuteHeroChain.cpp  StayAtTown.cpp  StayAtTown.h
AI/Nullkiller2/Helpers/: HeroMap.h
AI/Nullkiller2/Markers/: HeroExchange.cpp
AI/Nullkiller2/Pathfinding/: AINodeStorage.cpp  AINodeStorage.h  AIPathfinder.cpp  AIPathfinder.h  AIPathfinderConfig.h  Actors.cpp  GraphPaths.cpp  ObjectGraph.cpp  ObjectGraphCalculator.h
AI/Nullkiller2/Pathfinding/Actions/: AdventureSpellCastMovementActions.cpp  BoatActions.cpp
AI/Nullkiller2/Pathfinding/Rules/: AILayerTransitionRule.cpp  AILayerTransitionRule.h  AIMovementAfterDestinationRule.cpp
AI/StupidAI/: CMakeLists.txt  StupidAI.cpp
CI/: create_appimage.sh  emit_partial.py  install_conan_dependencies.sh  normalize_relative_includes.py  upload_package.sh
android/: AndroidManifest.xml  shortcuts.xml
client/: ArtifactsUIController.cpp  CMakeLists.txt  CPlayerInterface.cpp  CPlayerInterface.h  CServerHandler.cpp  CServerHandler.h  Client.cpp  ClientCommandManager.cpp  ClientCommandManager.h  ClientNetPackVisitors.h  Discord.cpp  Discord.h  GameChatHandler.h  GameEngine.cpp  GameEngine.h  GameInstance.cpp  HeroMovementController.cpp  LobbyClientNetPackVisitors.h  NetPacksClient.cpp  NetPacksLobbyClient.cpp  PlayerLocalState.cpp  PlayerLocalState.h
clientapp/: CMakeLists.txt  EntryPoint.cpp
cmake_modules/: Version.cmake  VersionDefinition.cmake
config/: battlefields.json  bonuses.json  buildingsLibrary.json  gameConfig.json  keyBindingsConfig.json  lobby.sql  obstacles.json  roeStringMapping.json  skills.json  spellEffects.json
debian/: changelog  control  controlLobby  rules  rulesLobby
docker/: BuildAndroid-aarch64.dockerfile
docs/: Readme.md
ios/: iOS_utils.h  iOS_utils.mm  rpath_remove_symlinks.sh
launcher/: CMakeLists.txt  demo.cpp  demo.h  eu.vcmi.VCMI.metainfo.xml  helper.cpp  helper.h  languages.cpp  main.cpp  mainwindow_moc.cpp  prepare_android.cpp  updatedialog_moc.cpp  vcmi.pot  vcmilauncher.desktop
lib/: AsyncRunner.h  BasicTypes.cpp  (+35 more)
libFacade/: CMakeLists.txt  Facade.cpp
luascript/: CMakeLists.txt  LuaCallWrapper.h  LuaContext.cpp  LuaContext.h  LuaModule.cpp  LuaModule.h  LuaReference.h  LuaScriptInstance.cpp  LuaScriptInstance.h  LuaScriptPool.cpp  LuaScriptPool.h  LuaSpellEffect.cpp  LuaSpellEffect.h  LuaStack.cpp  LuaStack.h  LuaUnitEffect.cpp  LuaUnitEffect.h  LuaWrapper.h  StdInc.h
luascript/api/: Artifact.cpp  Artifact.h  BattleCb.cpp  BattleCb.h  BonusSystem.cpp  BonusSystem.h  Creature.cpp  Creature.h  DocExport.cpp  DocExport.h  DocRegistrar.h  Enums.cpp  Enums.h  Faction.cpp  Faction.h  FieldDocRegistrar.h  GameCb.cpp  GameCb.h  HeroClass.cpp  HeroClass.h  HeroInstance.cpp  HeroInstance.h  HeroType.cpp  HeroType.h  LuaMetaString.cpp  LuaMetaString.h  LuaRegistrar.h  MethodRegistrar.h  ObjectInstance.cpp  ObjectInstance.h  Player.cpp  Player.h  Registry.cpp  Registry.h  SerializableRegistar.h  ServerCb.cpp  ServerCb.h  Services.cpp  Services.h  SignatureOf.h  (+6 more)
luascript/api/adventure/: HeroInstance.cpp  HeroInstance.h  StackInstance.cpp  StackInstance.h
luascript/api/battle/: BattleHex.cpp  BattleHex.h  BattleHexArray.cpp  BattleHexArray.h  BattleHexArrayProxy.cpp  BattleHexArrayProxy.h  BattleHexProxy.cpp  BattleHexProxy.h  Obstacle.cpp  Obstacle.h  SpellObstacleDescriptor.cpp  SpellObstacleDescriptor.h  Unit.cpp  Unit.h  UnitProxy.cpp  UnitProxy.h  UnitState.cpp  UnitState.h
luascript/api/callback/: IBattleInfoCallback.cpp  IBattleInfoCallback.h  IGameInfoCallback.cpp  IGameInfoCallback.h  ServerCallback.cpp  ServerCallback.h
luascript/api/events/: AdventureEvents.cpp  AdventureEvents.h  BattleEvents.cpp  BattleEvents.h  EventBus.cpp  EventBus.h  EventBusProxy.cpp  EventBusProxy.h  GenericEvents.cpp  GenericEvents.h  SubscriptionRegistry.cpp  SubscriptionRegistry.h  SubscriptionRegistryProxy.cpp  SubscriptionRegistryProxy.h
luascript/api/netpacks/: BattleLogMessage.cpp  BattleLogMessage.h  BattleStackMoved.cpp  BattleStackMoved.h  BattleUnitsChanged.cpp  BattleUnitsChanged.h  EntitiesChanged.cpp  EntitiesChanged.h  InfoWindow.cpp  InfoWindow.h  PackForClient.h  SetResources.cpp  SetResources.h
luascript/api/spells/: Mechanics.cpp  Mechanics.h  Problem.cpp  Problem.h
luascript/api/texts/: MetaString.cpp  MetaString.h
serverapp/: CMakeLists.txt  EntryPoint.cpp
vcmiqt/: CMakeLists.txt
(+1083 files in other folders)
